LU-5984 obd: fix lastid file name in compat code

The lastid_compat_check() tries to find last_id file from
Lustre 2.3 with wrong name, so lastid counter in the new
LASTID file is initialized with wrong value. This causes FID
re-use and inability to create new files in given sequence.

Signed-off-by: Mikhail Pershin <mike.pershin@intel.com>
Change-Id: I482331bb0d6d5a286d94d56b943cbff2a82ac37f